# mcp-search

./: .gitignore  Cargo.toml  DESIGN.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
src/: chunker.rs  config.rs  embedder.rs  indexer.rs  langpacks.rs  logger.rs  main.rs  parser.rs  policy.rs  protocol.rs  search.rs  server.rs  store.rs  types.rs  watcher.rs
